FakeVim: (Un)escape special chars in replacements

Task-number: QTCREATORBUG-15512
Change-Id: Idd625a1ea400e4d2dcae314ddd1a77551c6bb787
Reviewed-by: Lukas Holecek <hluk@email.cz>
Reviewed-by: hjk <hjk@theqtcompany.com>